# cli

./: .Makefile.swp  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CONTRIBUTING.md  DEDUPLICATION_PLAN.md  Makefile  README.md  SLACK_INTEGRATION_IMPLEMENTATION_SUMMARY.md  authorized_entitlement.lic  base.html.j2  breadcrumbs.html.j2  deployment.yaml  env.ps1  extra.css  index.html  input.txt  mkdocs.yml  pyproject.toml  pytest.ini  search.html  sitemap.xml  slack-integration-plan.md  test.sh  test.yaml
.bob/: custom_modes.yaml
.bob/plans/: 2025-01-31-fix-dev-channel-upgrade.md  2025-06-04-mas-rollback-implementation.md  2025-07-14-fix-cert-manager-workload-namespace-collection.md  2025-07-14-mas-catalog-digest-update-review.md  2025-07-14-mas-catalog-image-fix.md  2026-05-10-kafka-imageprocessor-storage.md  2026-05-11-timeout-root-cause-analysis.md  2026-05-14-kafka-civil-image-processor.md  2026-05-16-install-context-refactoring.md  2026-05-20-docs-reorganization.md  2026-05-21-migrate-openshift-to-kubernetes-client.md  2026-06-04-must-gather-python-migration.md  2026-06-05-markdown-index-refactor.md  2026-06-05-web-viewer.md  2026-06-06-must-gather-migration-fixes.md  2026-06-06-reconcile-logs-collection.md  2026-06-06-setup-py-to-pyproject-toml-migration.md  2026-06-06-unified-test-structure.md  2026-06-07-quick-summary-code-analysis.md  2026-06-07-remove-quick-summary.md  2026-06-07-split-manifest-per-namespace.md  2026-06-08-parallel-collection-optimization.md  2026-06-09-must-gather-collectors-refactor.md  2026-06-18-add-arch-parameter.md  2026-06-18-implementation-summary.md  2026-06-18-suite-summary-conversion.md  2026-06-20-entitlement-key-validation.md  2026-07-01-kubernetes-sm-backend.md  2026-07-02-fix-chosencatalog-missing-dev-mode.md  (+1 more)
.bob/redis-locking/: README.md
.github/: CODEOWNERS
catalogs/: index.html  v8-220717-amd64.yaml  v8-220805-amd64.yaml  v8-220927-amd64.yml  v8-221025-amd64.yaml  v8-221129-amd64.yaml  v8-221214-amd64.yaml  v8-221228-amd64.yaml  v8-230111-amd64.yaml  v8-230214-amd64.yaml  v8-230217-amd64.yaml  v8-230314-amd64.yaml  v8-230328-amd64.yaml  v8-230407-amd64.yaml  v8-230411-amd64.yaml  v8-230414-amd64.yaml  v8-230518-amd64.yaml  v8-230526-amd64.yaml  v8-230616-amd64.yaml  v8-230627-amd64.yaml  v8-230721-amd64.yaml  v8-230725-amd64.yaml  v8-230829-amd64.yaml  v8-230926-amd64.yaml  v8-231004-amd64.yaml  v8-231031-amd64-issue1.yaml  v8-231031-amd64.yaml  v8-231128-amd64.yaml  v8-231228-amd64.yaml  v8-240130-amd64.yaml  v8-240227-amd64.yaml  v8-240326-amd64.yaml  v8-240405-amd64.yaml  v8-240430-amd64.yaml  v8-240528-amd64.yaml  v8-amd64.yml  v9-240625-amd64.yaml  v9-240730-amd64.yaml  v9-240827-amd64.yaml  v9-240827-s390x.yaml  (+110 more)
changes/: index.html
css/: theme.css
docs/: changes.md  extra.css  ibm-toolchain-redis-setup.sh  index.md  redis-locking-setup.md
examples/: eam_migration.md  mirror_db2.md
mkdocs_plugins/: README.md  setup.py
python/: .coverage  .flake8  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.py  test_validation.py
redis-locking-setup/: index.html
scripts/: mas-provision-fyre  mas-provision-roks
search/: search_index.json
tekton/: README.md  generate-install.yml  generate-pipeline.sh  generate-pipelines.yml  generate-tekton-pipelineruns.yml  generate-tekton-pipelines.yml  generate-tekton-tasks.yml  generate-tekton-upgrade-with-fvt.yml  generate-tekton.sh  generate-tekton.yml  generate-upgrade-test.yml  test-generate-all.sh  test.sh  test_schema.py
(+2767 files in other folders)
