[build-system]
requires = [
  "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 160
include = 'python/(src|test|tests)/.*\.py$'

[tool.flake8]
max-line-length = 160

[tool.basedpyright]
# Only check must-gather module during gradual rollout
include = ["python/tests/cli/must_gather"]

# Use "basic" mode - focuses on our code, lenient with untyped dependencies
# Options: "off", "basic", "standard", "strict"
typeCheckingMode = "basic"

# Target Python version
pythonVersion = "3.12"

# Execution environments for proper import resolution
# This tells basedpyright where to find Python modules
executionEnvironments = [
  { root = "python/src" },
  { root = "python/test", extraPaths = ["python/src"] },
  { root = "python/tests", extraPaths = ["python/src"] }
]

[tool.uv.workspace]
members = [
    "python",
]
